# xbase

./: .clang-format  .gitignore  0001-Fix-__GNU-LesserC__.patch  0002-Fix-__GNU-LesserG__.patch  0003-Fix-config.patch  0004-Fix-xblock.cpp.patch  0005-Fix-warning-with-_ftell-redefine.patch  0006-Fix-include-case-in-xbnode.cpp.patch  0007-Fix-dumprecs.cpp.patch  0008-Change-gets-to-fgets.patch  0009-Fix-warnings-about-converting-string-literal-to-char.patch  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  apply_patches  authors  configure  install  readme  readme.md
.ctags.d/: exclude.ctags
docs/: CMakeLists.txt  Makefile.in  doxygen.cfg.in
examples/: .gitignore  CMakeLists.txt  Makefile.in  exfilter.cpp  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  xbstring.cpp
html/: Makefile.am  Makefile.in  xbc1.htm
libtest/: .gitignore  CMakeLists.txt  Makefile.in  exptest.cpp  indextst.cpp  lfiletst.cpp  locktest.cpp  testdate.cpp
test/: CMakeLists.txt  lfiletst.cpp  locktest.cpp  readme  test_date.cpp  test_exp.cpp  test_index.cpp  test_lfile.cpp  test_lock.cpp
xbase64/: .gitignore  CMakeLists.txt  Makefile.in  makebcc.bat  xbase64.cpp  xbase64.h  xbcdx.cpp  xbcdx.h  xbconfig.h.in  xbdate.cpp  xbdate.h  xbdbf.cpp  xbdbf.h  xbexp.cpp  xbexp.h  xbexpfnc.cpp  xbexpprc.cpp  xbfields.cpp  xbfile.cpp  xbfile.h  xbfilter.cpp  xbfilter.h  xbindex.cpp  xbindex.h  xblock.cpp  xblock.h  xbmemo.cpp  xbmindex.h  xbndx.cpp  xbndx.h  xbnode.cpp  xbnode.h  xbntx.cpp  xbntx.h  xbretcod.h  xbstring.cpp  xbstring.h  xbtypes.h  xbwincfg.h
xbase64-3.1.2/: ChangeLog  Makefile.in  authors  configure  configure.in  news  todo  xbase64-config.in
xbase64-3.1.2/docs/: Makefile.in  doxygen.cfg.in
xbase64-3.1.2/examples/: Makefile.am  Makefile.in  exfilter.cpp  makebcc.bat  sample1.cpp  sample2.cpp  sample4.cpp  sample5.cpp  xbstring.cpp
xbase64-3.1.2/html/: Makefile.in  index.htm  xba1.htm  xba2.htm  xbapps.htm  xbc16.htm  xbc2.htm  xbc5.htm  xbc6.htm
xbase64-3.1.2/libtest/: Makefile.am  Makefile.in  exptest.cpp  indextst.cpp  lfiletst.cpp  locktest.cpp  makebcc.bat  testdate.cpp
xbase64-3.1.2/xbase64/: Makefile.in  xbase64.cpp  xbase64.h  xbcdx.h  xbconfig.h  xbdate.h  xbdbf.cpp  xbdbf.h  xbexp.h  xbfile.cpp  xbfile.h  xbfilter.cpp  xbfilter.h  xbindex.h  xblock.cpp  xblock.h  xbndx.h  xbnode.cpp  xbntx.cpp  xbntx.h  xbstring.cpp  xbstring.h
