## Process this file with automake to produce Makefile.in
##
#	This file is part of the XBase libraries
#    Copyright (C) 1998,1999 Vitaly Fedrushkov <fedrushkov@acm.org>

#    This library is free software; you can redistribute it and/or
#    modify it under the terms of the GNU Library General Public
#    License as published by the Free Software Foundation; either
#    version 2 of the License, or (at your option) any later version.

#    This library is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#    Library General Public License for more details.

#    You should have received a copy of the GNU Library General Public
#    License along with this library; see the file COPYING.LIB.  If not,
#    write to the Free Software Foundation, Inc., or see
#    http://www.gnu.org/.

EXTRA_DIST = COPYING.LIB Xb2cpp.htm xbase.jpg index.htm xba1.htm         \
	xba2.htm xbapps.htm xbbib.htm xbc1.htm xbc2.htm xbc3.htm         \
	xbc4.htm xbc12.htm xbc13.htm xbc14.htm xbc15.htm xbc16.htm       \
	xbc17.htm xbc18.htm xbc2.htm xbc3.htm xbc4.htm xbc5.htm xbc6.htm \
	xbc7.htm xbc8.htm xblock.htm xbc11.htm

## Uncomment these to have docs installed by `make install`:

## htmldir = $(prefix)/doc/$(PACKAGE)-$(VERSION)/html
## html_DATA = $(EXTRA_DIST)

MAINTAINERCLEANFILES = Makefile.in

CLEANFILES = *.bak Makefile.in